# ctop-plus-plus

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  Dockerfile  README.md  demo.sh  design.md  qml.qrc  sys states  vcpkg.json
bpf/: traffic_monitor.bpf.c
docs/: Dockerfile.report  build-report-pdf.sh  docker-guide.md  mid-term-report.md
docs/archive/contrib-b/: B同学感悟.docx  README.md  sys stats前端UI.cpp
include/ctopp/model/: network_model.hpp  packet_record.hpp  sys_stats_model.hpp  sys_stats_snapshot.hpp
include/ctopp/viewmodel/: net_view_data.hpp  net_view_model.hpp  sys_view_data.hpp  sys_view_model.hpp
qml/: NetworkTrafficPage.qml  SystemStatsPage.qml  main.qml
src/: main.cpp
src/model/: network_model.cpp  sys_stats_model.cpp  sys_stats_reader.cpp  sys_stats_reader.hpp
src/viewmodel/: net_view_model.cpp  sys_view_model.cpp
test/: pipeline_smoke.cpp  sys_stats_smoke.cpp  sys_stats_test.cpp
